# gcopy

.github/workflows/: desktop-build.yml
desktop/: .gitignore  generate-icons.sh  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: clipboard.rs  config.rs  lib.rs  main.rs  sync.rs  tray.rs
desktop/src/components/: HistoryList.tsx  Logo.tsx  Navbar.tsx  Settings.tsx  SyncClipboard.tsx
desktop/src/lib/: clipboard.ts  i18n.ts
desktop/src/locales/: en.json  zh.json
desktop/src/models/: db.ts
docs/: desktop-app-design.md
